# petcon_theme

./: MANIFEST.in  README.md  pyproject.toml
petcon_theme/: hooks.py  modules.txt
petcon_theme/public/css/: desk_theme.css
petcon_theme/public/js/: desk_icons.js  desk_tiles.js
